index: Final videos.

--- a/content/index.html
+++ b/content/index.html
@@ -53,8 +53,8 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 	</p><p>
 	You may also submit feedback on individual talks by following the link at the bottom of each event page in the schedule.
 	</p>
-	<h2>Videos</h2>
-	<p>Videos will appear gradually on <a href="http://video.fosdem.org/2016/">video.fosdem.org</a> as they are marked up and encoded over the coming days.  Of course we have not yet had the opportunity to review the actual content, but at this stage we estimate that we captured approximately three-quarters of the event, with good coverage of Saturday afternoon and Sunday in most rooms.</p>
+	<h2>Final Videos</h2>
+	<p>Final videos have been uploaded to <a href="http://video.fosdem.org/2016/">video.fosdem.org</a> providing coverage of about three-quarters of the event. Follow the 'FOSDEM 2016 Video' links on the web pages of individual talks.</p>
     </div>
 
   </div>
