--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -52,8 +52,7 @@ sponsors_under_navigation: true
 </strong></dt>
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>Rogier</strong> (near <strong>Gare du Nord</strong>) towards <strong>Boondael Gare</strong></li>
-<li><s><strong>Stop: </strong>ULB</s></li>
-<li><strong>Remark: </strong>Due to <a href="http://www.stib-mivb.be/irj/go/km/docs/STIB-MIVB/INTERNET/attachments/netinfo_inforeseau/plan_25-94.pdf">roadworks</a>, the stop "ULB" is skipped. Use the stop "Cambre-Étoile" and take the special T-bus which stops at ULB on Av. Franklin Roosevelt.
+<li><strong>Stop: </strong>ULB</li>
 </ul></dd>
 
 <dt><strong>
@@ -61,8 +60,7 @@ sponsors_under_navigation: true
      title="STIB/MIVB - Bus 71">Bus 71</a></strong></dt>
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>De Brouck&egrave;re</strong> in central Brussels towards <strong>Delta</strong></li>
-<li><s><strong>Stop: </strong>ULB</s></li>
-<li><strong>Remark: </strong>Due to <a href="http://www.stib-mivb.be/irj/go/km/docs/STIB-MIVB/INTERNET/attachments/plan%20travaux%20avenue%20Buyl.pdf">roadworks</a>, bus 71 will make a detour and skip the stop "ULB". Use the stops "Buyl" or "Cimmetière d'Ixelles", which are a 5 minute walk from the campus.</li>
+<li><strong>Stop: </strong>ULB</li>
 </ul></dd>
 
 <dt><strong>
@@ -71,7 +69,6 @@ sponsors_under_navigation: true
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>ADEPS</strong> towards <strong>Dev&egrave;ze-ULB</strong></li>
 <li><strong>Stop: </strong>ULB</li>
-<li><strong>Remark: </strong>Due to <a href="http://www.stib-mivb.be/irj/go/km/docs/STIB-MIVB/INTERNET/attachments/plan%20travaux%20avenue%20Buyl.pdf">roadworks</a>, bus 72 will make a detour, but will stop at "ULB".
 </ul></dd>
 
 <dt><strong>
@@ -80,8 +77,7 @@ sponsors_under_navigation: true
 </strong></dt>
 <dd><ul>
 <li><strong>Direction: </strong>From <strong>Louise</strong> towards <strong>Mus&eacute;e du Tram</strong></li>
-<li><s><strong>Stop: </strong>ULB</s></li>
-<li><strong>Remark: </strong>Due to <a href="http://www.stib-mivb.be/irj/go/km/docs/STIB-MIVB/INTERNET/attachments/netinfo_inforeseau/plan_25-94.pdf">roadworks</a>, the stop "ULB" is skipped. Use the stop "Cambre-Étoile" and take the special T-bus which stops at ULB on Av. Franklin Roosevelt.
+<li><strong>Stop: </strong>ULB</li>
 </ul></dd>
 
 </dl>
