transportation: Remove roadworks.

--- a/content/practical/transportation.html
+++ b/content/practical/transportation.html
@@ -5,7 +5,7 @@ sponsors_under_navigation: true
 ---
 <p>FOSDEM will take place at the ULB Solbosch Campus, <strong>Brussels, Belgium</strong>, Europe, Earth.</p>
 
-<img style="float: right; text-align: right" src="asset:campusmap_roadworks" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"}/>
+<img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"}/>
 
 <div class="location-text">
   <a class="logo-ulb-big" href="#">Université libre de bruxelles</a>
@@ -89,9 +89,7 @@ station which has a regular service to many popular destinations within
 Belgium and to surrounding countries.</p>
 <p>Three buses will provide the service between <strong>15:30</strong>
 and <strong>19:30</strong>. The journey takes approximately 20 minutes.
-Due to roadworks, the buses stop at a <u>different location</u> than in
-previous years. Buses depart from <strong>Av. Franklin
-Roosevelt</strong> (next to the food vans).</p>
+The departure location will be confirmed nearer the event.</p>
 <p>Between 15:30 and 17:15, a bus is scheduled to depart every 15
 minutes. Based on previous experience, we expect the buses to be
 busiest from 17:30 on. We will abandon our fixed schedule then with
