stands: publish accepted projects. location tbd later

--- a/content/stands.html
+++ b/content/stands.html
@@ -4,68 +4,74 @@
 # Use the format:   - Stand name: URL
 title: Stands
 stands:
-# All [in random order] (54):
-  AW (6):
-   - Coreboot / Flashrom
-   - PTXdist and Barebox
-   - Open hardware laptops
-   - JavaCard Pro
-   - OpenEmbedded
-   - Brain-Duino
-  H (8):
-   - CoreOS
-   - MongoDB
+  All [in random order] (61):
+   - Automotive Grade Linux
+   - Bazel
    - BBC Open Source
-   - Python
-   - WolfSSL
-   - OSM / OpenArialMap
-   - MySQL
-   - O'Reilly Media
-  K [level 1, group A] (10):
-   - KDE
-   - GNOME
-   - LibreOffice
-   - Kolab and Roundcube
-   - Enlightenment
-   - ownCloud
-   - illumos
-   - OpenSuse
+   - CAcert / secure-u
    - CentOS
-   - Fedora
-  K [level 1, group B] (7):
-   - ReactOS
-   - BAREOS
+   - CiviCRM
+   - coala
+   - coreboot
+   - CoreOS Linux
+   - CorteXlab
    - Debian
-   - PostgreSQL
-   - OpenMandriva
-   - Mageia
+   - diaspora*
+   - Fedora Project
+   - Free Software Foundation Europe (FSFE)
+   - FreeBSD Project
    - Gentoo
-  K [level 1, group C] (8):
-   - FSFE
-   - OpenVZ
-   - Xen
-   - OpenStack
-   - oVirt/Foreman
    - Gluster
-   - DRLM
-   - CAcert
-  K [level 2] (16):
-   - Mozilla
-   - Apache Software Foundation
-   - Eclipse Foundation
+   - GNOME
+   - GNU GRUB
+   - GNU Taler
+   - Godot Engine
+   - Google Summer of Code and Google Code-in programs
+   - GrimoireLab
+   - ham radio
+   - illumos
    - Jenkins
-   - Wikis and CMS
-   - MediaWiki
-   - Linux from scratch
-   - Perl
-   - Barghest
-   - Coala
-   - Google Summer of Code
-   - 3D Printing
-   - Diaspora
-   - PicoTCP
+   - KDE
+   - Kopano
+   - LibreOffice
+   - Linux From Scratch
    - Matrix
+   - Mozilla
+   - MuseScore
+   - MySQL
+   - Nextcloud
+   - Open Build Service / openQA
+   - Open smart grid platform
+   - Open Source Hardware
+   - OpenEmbedded
+   - OpenNMS
+   - OpenStack
+   - openSUSE
+   - oVirt / Foreman
+   - OW2
+   - ownCloud
+   - Perl Programming Language
+   - PostgreSQL
+   - Python Devroom
+   - ReactOS
+   - SOFA
+   - Software Freedom Conservancy
+   - Suricata IDS
+   - The Apache Software Foundation
    - The Realtime Lounge
+   - Tor Project, Tails Project, Frënn vun der Ënn, Nos oignons
+   - Turris Omnia
+   - Ultimaker
+   - Vikings - libre hosting for all
+   - Wikis and CMS
+   - wolfSSL
+   - Xen Project
+# AW (6):
+# H (8):
+# K [level 1, group A] (10):
+# K [level 1, group B] (7):
+# K [level 1, group C] (8):
+# K [level 2] (16):
 
 ---
 <%
@@ -123,12 +129,12 @@ give away goodies and so forth, and to present themselves to the visitors
 in a more personal fashion.
 </p>
 <p>
-The following stands will be present at FOSDEM 2016.
+The following stands will be present at FOSDEM 2017.
 <%
 =begin
 %>
 <span class="label label-info">
-The list of accepted stands for FOSDEM 2016 has not yet been published!
+The list of accepted stands for FOSDEM 2017 has not yet been published!
 </span>
 </p>
 <p>
