index: Reinstate announcement block

--- a/content/index.html
+++ b/content/index.html
@@ -41,6 +41,12 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     %>
   </div>
 
+  <div class="announcement-block">
+    <h2>FOSDEM 2017</h2>
+    <p>FOSDEM 2017 will take place at ULB Campus Solbosch on Saturday 4 and Sunday 5 February 2017.
+    </p>
+  </div>
+
   <div class="news-block">
     <h2>NEWS</h2>
     <ul class="news-list">
