Update staff list

--- a/content/about.html
+++ b/content/about.html
@@ -102,27 +102,29 @@ navtitle: About
     <a name="team"></a><h2>The team</h2>
     <small>in alphabetical order</small>
     <ul>
+      <li>Nevelina Aleksandrova</li>
       <li>Gerry Demaret</li>
       <li>Michael De Swert</li>
       <li>Philippe De Swert</li>
+      <li>Egbert De Vries</li>
       <li>Geert Goossens</li>
       <li>Jan Gyselinck</li>
       <li>Richard Hartmann</li>
-      <li>Job Joossen</li>
       <li>Alasdair Kergon</li>
+      <li>Vasil Kolev</li>
       <li>Daniele Lacamera</li>
-      <li>Niels Laukens</li>
       <li>Koert Loret</li>
       <li>Jan-Frederik Martens</li>
+      <li>Marthe Parada Delgado</li>
       <li>Juan Rial</li>
       <li>Stella Rouzi</li>
       <li>Sebastian Schauenburg</li>
+      <li>Jonas Scheers</li>
       <li>Johan van Selst</li>
       <li>Wouter Simons</li>
-      <li>Wynke Stulemeijer</li>
+      <li>Emanuil Tolev</li>
       <li>Mark Van den Borre</li>
       <li>Wouter Verhelst</li>
-      <li>Jaron Vi&euml;tor</li>
       <li>Bart Weijs</li>
       <li>The many volunteers who help out during the weekend</li>
       <li>...</li>
