stands: publish stand locations

--- a/content/stands.html
+++ b/content/stands.html
@@ -4,75 +4,74 @@
 # Use the format:   - Stand name: URL
 title: Stands
 stands:
-  All [in random order] (61):
-   - Automotive Grade Linux
-   - Bazel
-   - BBC Open Source
-   - CAcert / secure-u
-   - CentOS
-   - CiviCRM
-   - coala
+# All [in random order] (61):
+  AW (7):
    - coreboot
-   - CoreOS Linux
-   - CorteXlab
-   - Debian
-   - diaspora*
-   - Fedora Project
-   - Free Software Foundation Europe (FSFE)
-   - FreeBSD Project
-   - Gentoo
-   - Gluster
-   - GNOME
    - GNU GRUB
-   - GNU Taler
-   - Godot Engine
-   - Google Summer of Code and Google Code-in programs
-   - GrimoireLab
-   - ham radio
-   - illumos
-   - Jenkins
-   - KDE
-   - Kopano
-   - LibreOffice
-   - Linux From Scratch
-   - Matrix
-   - Mozilla
-   - MuseScore
-   - MySQL
-   - Nextcloud
-   - Open Build Service / openQA
-   - Open smart grid platform
    - Open Source Hardware
+   - Automotive Grade Linux
+   - Ham radio
+   - CorteXlab
    - OpenEmbedded
-   - OpenNMS
-   - OpenStack
-   - openSUSE
-   - oVirt / Foreman
-   - OW2
-   - ownCloud
-   - Perl Programming Language
-   - PostgreSQL
-   - Python Devroom
-   - ReactOS
-   - SOFA
+  H (7):
+   - Godot Engine
    - Software Freedom Conservancy
-   - Suricata IDS
-   - The Apache Software Foundation
-   - The Realtime Lounge
+   - BBC Open Source
+   - Python
+   - WolfSSL
+   - GrimoireLab
+   - MySQL
+  K [level 1, group A] (11):
+   - KDE
+   - GNOME
+   - LibreOffice
+   - Kopano
+   - CiviCRM
+   - GNU Taler
+   - FreeBSD Project
+   - illumos
+   - OpenSUSE
+   - CentOS
+   - Fedora Project
+  K [level 1, group B] (8):
+   - ReactOS / Haiku
+   - Gentoo
+   - CoreOS Linux
+   - Debian
+   - PostgreSQL
+   - Nextcloud
+   - Bazel
+   - Open Build Service / OpenQA
+  K [level 1, group C] (8):
+   - Free Software Foundation Europe (FSFE)
+   - Vikings
    - Tor Project, Tails Project, Frënn vun der Ënn, Nos oignons
-   - Turris Omnia
-   - Ultimaker
-   - Vikings - libre hosting for all
-   - Wikis and CMS
-   - wolfSSL
    - Xen Project
-# AW (6):
-# H (8):
-# K [level 1, group A] (10):
-# K [level 1, group B] (7):
-# K [level 1, group C] (8):
-# K [level 2] (16):
-
+   - OpenStack
+   - oVirt / Foreman
+   - Gluster
+   - ownCloud
+   - CAcert / secure-u
+  K [level 2] (16):
+   - Mozilla
+   - diaspora*
+   - Apache Software Foundation
+   - OW2
+   - Jenkins
+   - Wikis and CMS
+   - OpenNMS
+   - Suricata IDS
+   - Turris Omnia
+   - Open Smart Grid Platform
+   - Perl Programming Language
+   - Coala
+   - Linux From Scratch
+   - Google Code-in, GSoC
+   - Ultimaker
+   - SOFA
+   - MuseScore
+   - Matrix
+   - The Realtime Lounge
 ---
 <%
   # parse stands meta
