stands: Add O'Reilly

--- a/content/stands.html
+++ b/content/stands.html
@@ -21,6 +21,7 @@ stands:
    - WolfSSL
    - GrimoireLab
    - MySQL
+   - O'Reilly Media
   K [level 1, group A] (11):
    - KDE
    - GNOME
@@ -42,17 +43,17 @@ stands:
    - Nextcloud
    - Bazel
    - Open Build Service / OpenQA
-  K [level 1, group C] (8):
+  K [level 1, group C] (9):
    - Free Software Foundation Europe (FSFE)
    - Vikings
-   - Tor Project, Tails Project, Frënn vun der Ënn, Nos oignons
+   - Tor Project, Tails Project, Frënn vun der Ënn, Nos oignons
    - Xen Project
    - OpenStack
    - oVirt / Foreman
    - Gluster
    - ownCloud
    - CAcert / secure-u
-  K [level 2] (16):
+  K [level 2] (19):
    - Mozilla
    - diaspora*
    - Apache Software Foundation
