streaming: Update room links to 2017 locations

--- a/content/schedule/streaming.html
+++ b/content/schedule/streaming.html
@@ -12,7 +12,7 @@ sponsors_under_navigation: true
   current_event = nil
 
   # Uncomment the following line to test what the site looks like at a specific time
-  #current_time = Time.parse('2016-01-31 14:20:00.000000000 +0100')
+  #current_time = Time.parse('2017-02-05 14:20:00.000000000 +0100')
 
   current_date = current_time.to_date
 %>
@@ -88,10 +88,10 @@ are available, too.</p>
 	    <% else %>
 	      <td>No event scheduled.</td>
 	    <% end %>
-	    <% if r[:slug] =~ /corridor/ or r[:slug] =~ /h3227/ or !current_event %>
+	    <% if r[:slug] =~ /corridor/ or r[:slug] =~ /h3227/ or r[:slug] =~ /h3228/ or !current_event %>
 	      <td></td>
 	    <% else %>
-	      <td><a href="http://live.fosdem.org/watch.php?room=<%= r[:slug] %>">Watch Live!</a></td>
+	      <td><a href="http://live.fosdem.org/watch/<%= r[:slug].gsub(/_.*/,'') %>">Watch Live!</a></td>
 	    <% end %>
 	  <% end %>
         </tr>
