promote: update for 2017

--- a/content/support/promote.html
+++ b/content/support/promote.html
@@ -16,8 +16,7 @@ them to promote the event</p>
         <tr>
           <%
             {
-              flyer_colour: 'black',
-              flyer_nobg: 'white',
+              flyer_colour: 'colour',
               flyer_greyscale: 'greyscale',
             }.each do |name, color|
               name = name.to_s
