stands: Add URLs and double-tables.

--- a/content/stands.html
+++ b/content/stands.html
@@ -1,78 +1,78 @@
 ---
 # vim: set ts=2 sw=2 et ai ft=eruby:
 
-# Use the format:   - Stand name: URL
+# Use the format:   - Stand name (#tables): URL
 title: Stands
 stands:
 # All [in random order] (61):
   AW (7):
-   - coreboot
-   - GNU GRUB
-   - Open Source Hardware
-   - Automotive Grade Linux
-   - Ham radio
-   - CorteXlab
-   - OpenEmbedded
+   - coreboot: http://www.coreboot.org/
+   - GNU GRUB: http://www.gnu.org/software/grub/
+   - Open Source Hardware: https://www.olimex.com/Products/DIY%20Laptop/
+   - Automotive Grade Linux: https://www.automotivelinux.org/
+   - Ham radio: http://uba.be/
+   - CorteXlab: http://www.cortexlab.fr/
+   - OpenEmbedded (2): http://www.openembedded.org/
   H (7):
-   - Godot Engine
-   - Software Freedom Conservancy
-   - BBC Open Source
-   - Python
-   - WolfSSL
-   - GrimoireLab
-   - MySQL
-   - O'Reilly Media
+   - Godot Engine: https://godotengine.org/
+   - Software Freedom Conservancy: http://sfconservancy.org/
+   - BBC Open Source: http://www.bbc.co.uk/opensource/
+   - Python: http://www.python-fosdem.org/
+   - WolfSSL: https://www.wolfssl.com/
+   - GrimoireLab: http://grimoirelab.github.io/
+   - MySQL: http://www.mysql.com/
+   - O'Reilly Media: http://www.oreilly.com/
   K [level 1, group A] (11):
-   - KDE
-   - GNOME
-   - LibreOffice
-   - Kopano
-   - CiviCRM
-   - GNU Taler
-   - FreeBSD Project
-   - illumos
-   - OpenSUSE
-   - CentOS
-   - Fedora Project
+   - KDE: http://www.kde.org/
+   - GNOME: http://gnome.org/
+   - LibreOffice: http://www.libreoffice.org/
+   - Kopano: https://kopano.io/
+   - CiviCRM: https://civicrm.org/
+   - GNU Taler: https://taler.net/
+   - FreeBSD Project: https://www.freebsd.org/
+   - illumos: http://wiki.illumos.org/display/illumos/illumos+Home
+   - OpenSUSE: https://www.opensuse.org/
+   - CentOS: https://www.centos.org/
+   - Fedora Project: http://getfedora.org/
   K [level 1, group B] (8):
-   - ReactOS / Haiku
-   - Gentoo
-   - CoreOS Linux
-   - Debian
-   - PostgreSQL
-   - Nextcloud
-   - Bazel
-   - Open Build Service / OpenQA
+   - ReactOS / Haiku: https://www.reactos.org/
+   - Gentoo: https://www.gentoo.org/
+   - CoreOS Linux: https://coreos.com/
+   - Debian: https://www.debian.org/
+   - PostgreSQL: https://www.postgresql.org/
+   - Nextcloud: https://nextcloud.com/
+   - Bazel: https://bazel.build/
+   - Open Build Service / OpenQA: http://openbuildservice.org/
   K [level 1, group C] (9):
-   - Free Software Foundation Europe (FSFE)
-   - Vikings
-   - Tor Project, Tails Project, Frënn vun der Ënn, Nos oignons
-   - Xen Project
-   - OpenStack
-   - oVirt / Foreman
+   - Free Software Foundation Europe (FSFE) (2): https://fsfe.org/
+   - Vikings: https://www.vikings.net/
+   - Tor Project, Tails Project, Frënn vun der Ënn, Nos oignons: https://www.torproject.org/
+   - Xen Project: http://xenproject.org/
+   - OpenStack: https://www.openstack.org/
+   - oVirt / Foreman: http://www.ovirt.org/
    - Gluster
-   - ownCloud
-   - CAcert / secure-u
+   - ownCloud: https://owncloud.org/
+   - CAcert / secure-u: http://www.cacert.org/
   K [level 2] (19):
-   - Mozilla
-   - diaspora*
-   - Apache Software Foundation
-   - OW2
-   - Jenkins
-   - Wikis and CMS
-   - OpenNMS
-   - Suricata IDS
-   - Turris Omnia
-   - Open Smart Grid Platform
-   - Perl Programming Language
-   - Coala
-   - Linux From Scratch
-   - Google Code-in, GSoC
+   - Mozilla: http://www.mozilla.org/
+   - diaspora*: https://diasporafoundation.org/
+   - Apache Software Foundation: http://www.apache.org/
+   - OW2: http://www.ow2.org/
+   - Jenkins: https://jenkins.io
+   - Wikis and CMS: https://tiki.org/
+   - OpenNMS: http://www.opennms.org/
+   - Suricata IDS: http://www.suricata-ids.org/
+   - Turris Omnia: https://omnia.turris.cz/
+   - Open Smart Grid Platform: http://opensmartgridplatform.org/
+   - Perl Programming Language (2): http://www.perl.org/
+   - Coala: http://coala.io/
+   - Linux From Scratch: http://www.linuxfromscratch.org/
+   - Google Code-in, GSoC: https://developers.google.com/open-source/gsoc/
    - Ultimaker
-   - SOFA
-   - MuseScore
-   - Matrix
-   - The Realtime Lounge
+   - SOFA: https://www.sofa-framework.org/
+   - MuseScore: https://musescore.org/
+   - Matrix: https://matrix.org/
+   - The Realtime Lounge (2): http://xmpp.org/
 ---
 <%
   # parse stands meta
