tracks: Show BOF tracks separately.

--- a/content/schedule/tracks.html
+++ b/content/schedule/tracks.html
@@ -7,6 +7,7 @@ categories = [
     {type: "keynote"},
     {type: "lightningtalk"},
     {type: "certification"},
+    {type: "bof"},
     {heading: "Main tracks", type: "maintrack"},
     {heading: "Developer rooms", type: "devroom"},
 ]
