stands: Taler shares a stand with  p≡p foundation

--- a/content/stands.html
+++ b/content/stands.html
@@ -28,7 +28,7 @@ stands:
    - LibreOffice: http://www.libreoffice.org/
    - Kopano: https://kopano.io/
    - CiviCRM: https://civicrm.org/
-   - GNU Taler: https://taler.net/
+   - GNU Taler / p&equiv;p foundation: https://taler.net/
    - FreeBSD Project: https://www.freebsd.org/
    - illumos: http://wiki.illumos.org/display/illumos/illumos+Home
    - OpenSUSE: https://www.opensuse.org/
