--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -40,13 +40,13 @@ aliases: /sightseeing
     <tr>
       <th>Saturday</th>
       <td>Infodesk H building</td>
-      <td>14:15</td>
-      <td>18:00</td>
+      <td>TBD</td>
+      <td>TBD</td>
     </tr>
     <tr>
       <th>Sunday</th>
       <td>Infodesk H building</td>
-      <td>13:15</td>
+      <td>TBD</td>
       <td>16:00</td>
     </tr>
   </tbody>
@@ -91,12 +91,12 @@ aliases: /sightseeing
 
 <p>
    <b>Saturday:</b>
-  A tour of Marolles, the Brussels middle age poor's district, the lovely chapelchurch, the house of peter Breughel, the bathhouse of Toots Thielemans, the typical alleys.
+   To be defined.
 </p>
 
 <p>
   <b>Sunday:</b>
-  The Brussels Chocolate tour. A visit the market place, manneke Pis, Jeanneke Pis, the galleries of Saint Hubert, the sacred Island and the Sable.
+  To be defined.
 </p>
 
 <p>
