contact: some clean-up, still room for improvement

--- a/content/contact.html
+++ b/content/contact.html
@@ -2,24 +2,64 @@
 title: Contact
 ---
 
-<p>You can contact us by email at <a href="mailto:info@fosdem.org">info@fosdem.org</a>.</p>
+<h3>Discuss</h3>
 
-<p>During the event, the Infodesk is reachable by phone using the number <span class="tel">+32 2 7887474</span> (for <u><b>urgent</b></u> matters only, please).</p>
+<p>
+  There is a <a href="https://lists.fosdem.org/mailman/listinfo/fosdem">mailing list</a> 
+  (and an archive) to help you find accommodation, transportation, etc&hellip; with other
+  FOSDEM visitors.
+</p>
 
-<p>There is also a <a href="http://lists.fosdem.org/mailman/listinfo/fosdem">mailing list</a> (and an archive) to help you find accommodation, transportation, etc&hellip; with other FOSDEM visitors.</p>
+<p>
+  You may also join us for a chat in
+  <a href="irc://irc.freenode.net/fosdem">the #fosdem channel on freenode</a>.
+</p>
 
-<p>You may also join us for a chat in <a href="irc://irc.freenode.net/fosdem">the #fosdem channel on freenode</a>.</p>
 
-<p>Visitors interested in helping out during the event can register for the <a href="http://lists.fosdem.org/mailman/listinfo/volunteers">volunteers</a> mailing list, where all communication between and coordination of volunteers takes place.</p>
+<h3>Help out</h3>
 
-<p>The legal entity behind FOSDEM is &quot;FOSDEM VZW&quot;, a not-for-profit under Belgian law with company registration number &quot;BE 0477.085.590&quot;.</p>
+<p>
+  Visitors interested in helping out during the event can register for the
+  <a href="https://lists.fosdem.org/mailman/listinfo/volunteers">volunteers</a> mailing
+  list, where all communication between and coordination of volunteers takes place.
+</p>
 
-<p>For sponsorship inquiries <u><b>only</b></u>, please contact:</p>
-<ul>
-    <li><a href="mailto:sponsors@fosdem.org">sponsors@fosdem.org</a></li>
-</ul>
+<p>
+  In the months before the event, volunteers can register at
+  <a href="https://volunteers.fosdem.org/">volunteers.fosdem.org</a> and pick up any of
+  the defined tasks.
+</p>
 
-<p>For press inquiries <u><b>only</b></u>, please contact:</p>
-<ul>
-    <li>Mark Van den Borre, <span class="tel">+32 486 961726</span>, <a href="mailto:mvandenborre@fosdem.org">mvandenborre@fosdem.org</a> (NL, EN)</li>
-</ul>
+
+<h3>Get in touch</h3>
+
+<p>
+  You can contact us by email at <a href="mailto:info@fosdem.org">info@fosdem.org</a>.
+</p>
+
+<p>
+  During the event, the Infodesk is reachable by phone using the number
+  <span class="tel">+32 2 7887474</span> (for <u><b>urgent</b></u> matters only, please).
+</p>
+
+<p>
+  For press inquiries <u><b>only</b></u>, please contact Mark Van den Borre,
+  <span class="tel">+32 486 961726</span>,
+  <a href="mailto:mvandenborre@fosdem.org">mvandenborre@fosdem.org</a> (NL, EN).
+</p>
+
+
+<h3>Sponsor</h3>
+
+<p>
+  For sponsorship inquiries <u><b>only</b></u>, please contact
+  <a href="mailto:sponsors@fosdem.org">sponsors@fosdem.org</a>.
+</p>
+
+
+<h3>Legal</h3>
+
+<p>
+  The legal entity behind FOSDEM is &quot;FOSDEM VZW&quot;, a not-for-profit under
+  Belgian law with company registration number &quot;BE 0477.085.590&quot;.
+</p>
