[sightseeing] final content

--- a/content/sightseeing.html
+++ b/content/sightseeing.html
@@ -92,12 +92,12 @@ aliases: /sightseeing
 
 <p>
    <b>Saturday:</b>
-   To be defined.
+   A tram ride to the centre of Brussels, followed by a guided toor on foot, going from the Koningsplein to the Canal. A representatice image of the city, with its diversity and dynamics.
 </p>
 
 <p>
   <b>Sunday:</b>
-  To be defined.
+  A walk in the neighbourhood of the Fosdem. A guided tour on foot, from the Abbey of Ter Kameren to Flagey.
 </p>
 
 <p>
