stands: replace Suricata with Kolab

--- a/content/stands.html
+++ b/content/stands.html
@@ -61,7 +61,7 @@ stands:
    - Jenkins: https://jenkins.io
    - Wikis and CMS: https://tiki.org/
    - OpenNMS: http://www.opennms.org/
-   - Suricata IDS: http://www.suricata-ids.org/
+   - Kolab, Kube and Roundcube: http://www.kolab.org/
    - Turris Omnia: https://omnia.turris.cz/
    - Open Smart Grid Platform: http://opensmartgridplatform.org/
    - Perl Programming Language (2): http://www.perl.org/
