keysigning: correct file extension used

--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -94,7 +94,7 @@ gpg --keyserver ksp.fosdem.org --send-key [keyid]
   list's detached signature using:
 </p>
 <pre class="sh">
-gpg --verify ksp-<%= klist %>.txt.sig ksp-<%= klist %>.txt
+gpg --verify ksp-<%= klist %>.txt.asc ksp-<%= klist %>.txt
 </pre>
 
 <p>
