--- a/content/index.html
+++ b/content/index.html
@@ -48,6 +48,10 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 	There are also <%= l('/interviews/', 'interviews') %> with some main track speakers, 
 	and details of this year's <%= l('/fringe/', 'fringe') %> events.
       </p>
+
+      <h2>Schedule Changes</h2>
+      <p>Changes made after the printed programme went to press are clearly marked in the schedule.  In particular, please note that the <b>Valgrind</b> devroom on Saturday and the <b>Community</b> devroom on Sunday have moved to room <b>UD2.119</b>.  Those familiar with the campus will find this room next to Chavanne and the key signing area.
+      </p>
     </div>
 
   </div>
