schedule: Generate amendments page

--- a/content/index.html
+++ b/content/index.html
@@ -49,8 +49,8 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 	and details of this year's <%= l('/fringe/', 'fringe') %> events.
       </p>
 
-      <h2>Schedule Changes</h2>
-      <p>Changes made after the printed programme went to press are clearly marked in the schedule.  In particular, please note that the <b>Valgrind</b> devroom on Saturday and the <b>Community</b> devroom on Sunday have moved to room <b>UD2.119</b>.  Those familiar with the campus will find this room next to Chavanne and the key signing area.
+      <h2>Schedule Amendments</h2>
+      <p>Changes made after the printed programme went to press are clearly marked in the schedule and listed on the <a href="page:/schedule/amendments">Schedule Amendments</a> page.  In particular, please note that the <b>Valgrind</b> devroom on Saturday and the <b>Community</b> devroom on Sunday have moved to room <b>UD2.119</b>.  Those familiar with the campus will find this room next to Chavanne and the key signing area.
       </p>
     </div>
 
