index: Mention videos and lost property.

--- a/content/index.html
+++ b/content/index.html
@@ -53,6 +53,13 @@ this year's <%= l('/fringe/', 'fringe') %> events.
       <h2>Schedule Amendments</h2>
       <p>Changes made after the printed programme went to press are clearly marked in the schedule and listed on the <a href="page:/schedule/amendments">Schedule Amendments</a> page.  In particular, please note that the <b>Valgrind</b> devroom on Saturday and the <b>Community</b> devroom on Sunday have moved to room <b>UD2.119</b>.  Those familiar with the campus will find this room next to Chavanne and the key signing area.
       </p>
+
+      <h2>Videos</h2>
+      <p>Encoding and review of the events videos is already underway!  For the state of the processing read the <a href="https://review.video.fosdem.org/overview">summary</a>. (Files may still be shown as missing until several hours after the talk has been presented so please don't ask us about that yet.)  Final videos are shown on and linked from the individual schedule pages for the talks and are mirrored from <a href="http://video.fosdem.org/2017/">video.fosdem.org</a> (after a further delay).
+      </p>
+
+      <h2>Lost Property</h2>
+      <p>Several items were handed in at the infodesks yesterday.  If you think you lost something on site, please ask at the K infodesk, or email <a href="mailto:info@fosdem.org">info@fosdem.org</a>.</p>
     </div>
 
   </div>
