index: post-event update

--- a/content/index.html
+++ b/content/index.html
@@ -42,24 +42,29 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
     %>
 
     <div class="announcement-block">
-      <h2>Welcome to FOSDEM 2017!</h2>
-      <p>FOSDEM 2017 is happening now at ULB Campus Solbosch!  All sessions are
-being <a href="page:/schedule/streaming">streamed live</a>!  Read the <%=
-l('/schedule/', 'full schedule') %>, list of <%= l('/stands/', 'stands') %>,
-<%= l('/interviews/', 'interviews') %> with main track speakers, and details of
-this year's <%= l('/fringe/', 'fringe') %> events.
+      <h2>FOSDEM 2017 is now over!</h2>
+      <p>The whole <a href="page:/about">team</a> would like to thank everyone for their contribution to another successful event!</p>
+
+      <p>
+      Please tell us about your FOSDEM experience at 
+      <a href="mailto:feedback@fosdem.org">feedback@fosdem.org</a>.
+      All your feedback and suggestions for next year will be greatly appreciated.
+      </p><p>
+      You may also submit feedback on individual talks by following the link at the bottom of each event page in the schedule.
       </p>
 
-      <h2>Schedule Amendments</h2>
-      <p>Changes made after the printed programme went to press are clearly marked in the schedule and listed on the <a href="page:/schedule/amendments">Schedule Amendments</a> page.  In particular, please note that the <b>Valgrind</b> devroom on Saturday and the <b>Community</b> devroom on Sunday have moved to room <b>UD2.119</b>.  Those familiar with the campus will find this room next to Chavanne and the key signing area.
+      <h2>Fringe</h2>
+      <p>
+        If you're still in the region, don't miss the remaining <a href="page:/fringe/">FOSDEM Fringe</a> events!
       </p>
+
 
       <h2>Videos</h2>
       <p>Encoding and review of the events videos is already underway!  For the state of the processing read the <a href="https://review.video.fosdem.org/overview">summary</a>. (Files may still be shown as missing until several hours after the talk has been presented so please don't ask us about that yet.)  Final videos are shown on and linked from the individual schedule pages for the talks and are mirrored from <a href="http://video.fosdem.org/2017/">video.fosdem.org</a> (after a further delay).
       </p>
 
       <h2>Lost Property</h2>
-      <p>Several items were handed in at the infodesks yesterday.  If you think you lost something on site, please ask at the K infodesk, or email <a href="mailto:info@fosdem.org">info@fosdem.org</a>.</p>
+      <p>Several items were handed in at the infodesks.  If you think you lost something on site, please email <a href="mailto:info@fosdem.org">info@fosdem.org</a>.</p>
     </div>
 
   </div>
