stringify some term because peole don't read instrcutiosn enough before coming

--- a/content/keysigning.html
+++ b/content/keysigning.html
@@ -77,7 +77,7 @@ gpg --keyserver ksp.fosdem.org --send-key [keyid]
 <p>
   If you are participating in the keysigning event (i.e.: you have submitted
   your key to the keyserver), you should download the final list of
-  participants and follow its instructions closely.
+  participants and follow its instructions closely. Said instructions are at the  begining of the file. 
 </p>
 
 <p>
@@ -120,7 +120,7 @@ gpg --verify ksp-<%= klist %>.txt.asc ksp-<%= klist %>.txt
   Please bring the <strong>printed list</strong>, a <strong>pen</strong>
   and appropriate form of <strong>identification</strong> with you to
   <%= conference()[:title] %>.
-  Note that it is not possible to print the list at the conference.
+  Note that it is <strong>not possible to print</strong> the list at the conference.
 </p>
 
 <p>
@@ -150,8 +150,8 @@ The hashes:              ☐
   8 - 7 - 6 - 5
 </pre>
 <p>
-  After the participants have verified each other's identity, the whole line
-  moves one step to their right.  Participants on the end of the line move to
+  After the participants have verified each other's identity, <strong>the whole line
+  moves one step to their right</strong>.  Participants on the end of the line move to
   the opposite line.  That way, everyone should be facing the next person on
   their list (modulo no-shows).
 </p>
