schedule: add video links to page with all events

--- a/content/index.html
+++ b/content/index.html
@@ -60,8 +60,13 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
 
 
       <h2>Videos</h2>
-      <p>Encoding and review of the events videos is already underway!  For the state of the processing read the <a href="https://review.video.fosdem.org/overview">summary</a>. (Files may still be shown as missing until several hours after the talk has been presented so please don't ask us about that yet.)  Final videos are shown on and linked from the individual schedule pages for the talks and are mirrored from <a href="http://video.fosdem.org/2017/">video.fosdem.org</a> (after a further delay).
-      </p>
+      <p>Encoding and review of the events videos is well underway and about
+half are already available!  For the state of the processing read the <a
+href="https://review.video.fosdem.org/overview">summary</a>.  Videos are
+available from <a href="http://video.fosdem.org/2017/">video.fosdem.org</a>
+after the mirrors have synced.  They are linked from the individual schedule
+pages for the talks and the <a href="page:/schedule/events">full schedule</a>
+page. </p>
 
       <h2>Lost Property</h2>
       <p>Several items were handed in at the infodesks.  If you think you lost something on site, please email <a href="mailto:info@fosdem.org">info@fosdem.org</a>.</p>
