contact: add address

--- a/content/contact.html
+++ b/content/contact.html
@@ -61,5 +61,6 @@ title: Contact
 
 <p>
   The legal entity behind FOSDEM is &quot;FOSDEM VZW&quot;, a not-for-profit under
-  Belgian law with company registration number &quot;BE 0477.085.590&quot;.
+  Belgian law with company registration number &quot;BE 0477.085.590&quot;. Our
+  address is &quot;FOSDEM VZW, Guldendelle 9, 1930 Zaventem&quot;.
 </p>
