index: remove fringe, reword video text

--- a/content/index.html
+++ b/content/index.html
@@ -53,20 +53,13 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       You may also submit feedback on individual talks by following the link at the bottom of each event page in the schedule.
       </p>
 
-      <h2>Fringe</h2>
-      <p>
-        If you're still in the region, don't miss the remaining <a href="page:/fringe/">FOSDEM Fringe</a> events!
-      </p>
-
-
       <h2>Videos</h2>
-      <p>Encoding and review of the events videos is well underway and about
-half are already available!  For the state of the processing read the <a
-href="https://review.video.fosdem.org/overview">summary</a>.  Videos are
-available from <a href="http://video.fosdem.org/2017/">video.fosdem.org</a>
-after the mirrors have synced.  They are linked from the individual schedule
-pages for the talks and the <a href="page:/schedule/events">full schedule</a>
-page. </p>
+      <p>Over 400 videos are already available this year!
+	Videos are linked from the individual schedule
+	pages for the talks and the <a href="page:/schedule/events">full schedule</a>
+	page.  They are mirrored from <a href="http://video.fosdem.org/2017/">video.fosdem.org</a>.
+	<a href="https://review.video.fosdem.org/overview">Summary</a> of processing status.  
+      </p>
 
       <h2>Lost Property</h2>
       <p>Several items were handed in at the infodesks.  If you think you lost something on site, please email <a href="mailto:info@fosdem.org">info@fosdem.org</a>.</p>
@@ -101,7 +94,7 @@ page. </p>
 
   <div class="location-block">
     <h2>LOCATION</h2>
-    <p>FOSDEM will take place at the ULB Solbosch Campus, <strong>Brussels, Belgium</strong>, Europe, Earth.</p>
+    <p>FOSDEM takes place at the ULB Solbosch Campus, <strong>Brussels, Belgium</strong>, Europe, Earth.</p>
     <div class="location-info">
       <div class="map">
         <img style="float: right; text-align: right" src="asset:campusmap" alt="ULB Solbosch Campus map: Location of FOSDEM" title="ULB Solbosch Campus map: Location of FOSDEM"}/>
