sponsors: add Minio

--- a/content/index.html
+++ b/content/index.html
@@ -15,7 +15,7 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
       <p>Every year, thousands of developers of free and open source software from all over the world gather at the event in Brussels.</p>
       <p class="btn-news"><a href="page:practical">No registration necessary.</a></p>
     </div>
-<!--
+
     <div class="logo-block">
       <h3><a href="page:/about/sponsors/">SPONSORS</a></h3>
       <%
@@ -34,7 +34,9 @@ maxnews = @config.fetch(:news).fetch(:items_on_index_page).to_i
         </ul>
       <% end %>
     </div>
--->
+
+    <div style="height: 200px;">&nbsp;</div>
+
     <%
     # Depending on the height of the sponsors graphic, general announcements
     # (distinct from "news" by virtue of being undated) should either go here
