faq: fix link to diplomatie.belgium.be

--- a/content/faq.html
+++ b/content/faq.html
@@ -21,7 +21,7 @@ navtitle: FAQ
 
         <p>If you are attending FOSDEM as part of your involvement with a project represented at our conference, we recommend you get in touch with someone you know locally who is involved in the project and ask them to invite you.</p>
 
-        <p>For information regarding Belgian visa requirements, we refer you to <a href="http://diplomatie.belgium.be/en/services/travel_to_belgium/visa_for_belgium/index.jsp">Belgium’s Foreign Affairs, Foreign Trade and Development Cooperation website</a></p>
+        <p>For information regarding Belgian visa requirements, we refer you to <a href="https://diplomatie.belgium.be/en/services/travel_to_belgium/visa_for_belgium">Belgium’s Foreign Affairs, Foreign Trade and Development Cooperation website</a></p>
 
     </div>
 </div>
